--- a/templates/result.html
+++ b/templates/result.html
@@ -5,10 +5,10 @@
 
         <h1 style="font-size: 40px; color: rgb(9, 9, 156); text-align: center;">Prediction Result</h1>
 
-	 {% if prediction==1 %}
+	 {% if data==1 %}
      <h1>Values shows that patient is Diabetic</h1>
 
-     {% elif prediction==0 %}
+     {% elif data==0 %}
      <h1>Great! Patient is Non-Diabetic &#128522;</h1>
 
      {%endif%} 
