--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Diabetes Prediction</title>
+        <link rel="stylesheet" href="../static/styles/style.css">
     </head>    
     
     <body>
